--- a/app/src/main/res/layout/activity_menu_curso2.xml
+++ b/app/src/main/res/layout/activity_menu_curso2.xml
@@ -11,10 +11,12 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:src="@drawable/molecula3"
+        android:layout_marginTop="2px"
+        android:layout_marginBottom="10px"
+        android:src="@drawable/menu"
         android:layout_gravity="center_horizontal" />
 
     <ScrollView
