--- a/app/src/main/res/layout/activity_menu_curso2.xml
+++ b/app/src/main/res/layout/activity_menu_curso2.xml
@@ -14,8 +14,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="2px"
-        android:layout_marginBottom="10px"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="10dp"
         android:src="@drawable/menu"
         android:layout_gravity="center_horizontal" />
 
