--- a/app/src/main/res/layout/activity_curso.xml
+++ b/app/src/main/res/layout/activity_curso.xml
@@ -2,13 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="#ddf"
     tools:context="org.example.micurso.app.Curso">
 
     <TextView
         android:id="@+id/txt1"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:text="DENOMINACION"
         android:textStyle="bold"
         android:textSize="30sp"
@@ -16,19 +21,10 @@
         android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/txt2"
-        android:layout_margin="20dp"
-        android:text="ABREVIATURA"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:textColor="#080"
-        android:gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/txt3"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:text="ESCUELA"
         android:textStyle="bold"
         android:textSize="20sp"
@@ -38,26 +34,27 @@
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/txt4"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:text="PROGRAMA"
         android:textStyle="bold"
         android:textSize="15sp"
         android:textColor="#000"
         android:gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
         android:layout_width="match_parent"
-        android:background="#000088"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/txt2"
+        android:layout_margin="10dp"
+        android:text="ABREV"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:textColor="#FFF"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="40dp"
-        android:text="Iniciar"
-        android:onClick="Iniciar"
-        />
+        android:textColor="#080"
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+
+
+
 
 </LinearLayout>
