--- a/app/src/main/res/layout/activity_menu_curso2.xml
+++ b/app/src/main/res/layout/activity_menu_curso2.xml
@@ -6,6 +6,7 @@
     android:padding="0px"
     android:orientation="vertical"
     android:gravity="center"
+    android:src="#000000"
     android:id="@+id/ln1"
   >
 
@@ -34,7 +35,7 @@
              android:layout_width="fill_parent"
              android:background="@drawable/boton2"
              android:layout_margin="8dp"
-             android:layout_marginRight="8dp"
+
              android:textStyle="bold"
              android:textSize="20sp"
              android:textColor="#FFF"
@@ -46,8 +47,8 @@
              android:id="@+id/btn2"
              android:layout_width="fill_parent"
              android:background="@drawable/boton2"
-             android:layout_margin="8dp"
-             android:layout_marginRight="8dp"
+             android:layout_margin="4dp"
+
              android:textStyle="bold"
              android:textSize="20sp"
              android:textColor="#FFF"
@@ -59,8 +60,8 @@
              android:id="@+id/btn3"
              android:layout_width="fill_parent"
              android:background="@drawable/boton2"
-             android:layout_margin="8dp"
-             android:layout_marginRight="8dp"
+             android:layout_margin="4dp"
+
              android:textStyle="bold"
              android:textSize="20sp"
              android:textColor="#FFF"
@@ -72,8 +73,8 @@
              android:id="@+id/btnDrive"
              android:layout_width="fill_parent"
              android:background="@drawable/boton2"
-             android:layout_margin="8dp"
-             android:layout_marginRight="8dp"
+             android:layout_margin="4dp"
+
              android:textStyle="bold"
              android:textSize="20sp"
              android:textColor="#FFF"
@@ -85,8 +86,7 @@
              android:id="@+id/btn4"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
-             android:layout_margin="8dp"
-             android:layout_marginRight="8dp"
+             android:layout_margin="4dp"
              android:textStyle="bold"
              android:textSize="20sp"
              android:textColor="#FFF"
